Add warning sign for applicants who have already been paid for their FOSS contributions

--- a/home/templates/home/applicant_review_detail.html
+++ b/home/templates/home/applicant_review_detail.html
@@ -118,7 +118,7 @@
 		</li>
 		<li>
 			{% if application.priorfossexperience.prior_paid_contributor %}
-				<b>Yes</b>, they have been paid for their FOSS contributions.
+				<span class="badge badge-warning">Warning</span><b>Yes</b>, they have been paid for their FOSS contributions.
 			{% else %}
 				<b>No</b>, no they have not been paid for their contributions to FOSS.
 			{% endif %}
