Reuse application flag for applications that need follow up.
One of the most common reasons for needing follow-up is if an applicant
mentions they're from a country or region under U.S. sanctions. The
incorrect time commitments flag is rarely used (usually that's covered
by the work or school flag). We can expand this flag to cover both
cases.

Now this flag just means that Outreachy organizers need to follow up via
email with an applicant.

TODO: Update database schema (field name and description) to match new
purpose.

--- a/home/templates/home/snippet/applicant_review_time_commitments.html
+++ b/home/templates/home/snippet/applicant_review_time_commitments.html
@@ -73,7 +73,7 @@
 							</td>
 						</tr>
 						<tr>
-							<td><b>Incorrect time commitment dates</b></td>
+							<td><b>Needs organizer follow-up</b></td>
 							<td>
 									<form method="post" action="{% url 'change-red-flag' applicant_username=application.applicant.account.username flag='incorrect_dates' flag_value='True' %}">
 										{% csrf_token %}
@@ -174,7 +174,7 @@
 												</div>
 											</div>
 										</li>
-										<li><b>Incorrect time commitment dates</b> - Does any time commitments look like they are too far in the past or in the future? Some applicants mis-type years or copy the term dates from an outdated guide that students have made for fellow applicants at their university.
+										<li><b>Needs organizer follow-up</b> - Does any information look incorrect? Do you need to follow up with an applicant that mentioned a sanctioned country or region?
 											<div class="container">
 												<div class="row">
 													<div class="col">
