--- a/home/templates/home/community_applicants.html
+++ b/home/templates/home/community_applicants.html
@@ -34,6 +34,7 @@ Review {{ community.name }} Applicants
 				<th scope="col">Number of days available</th>
 				<th scope="col">Number of contributions</th>
 				<th scope="col">Applying to GSoC?</th>
+				{% if is_staff %}<th scope="col">Time commitment updates</th>{% endif %}
 			</tr>
 			</thread>
 		{% for project in projects %}
@@ -49,6 +50,7 @@ Review {{ community.name }} Applicants
 					<td> - </td>
 					<td> - </td>
 					<td> - </td>
+					{% if is_staff %}<td> - </td>{% endif %}
 				</tr>
 				{% endif %}
 				{% for intern in interns %}
@@ -74,6 +76,7 @@ Review {{ community.name }} Applicants
 							<td>{{ tcs.longest_period_free }} / {{ tcs.internship_total_days.days }} days</td>
 							<td>{{ application.number_contributions }}</td>
 							<td>{% if application.applying_to_gsoc %}Yes{% else %} - {% endif %}</td>
+							{% if is_staff %}<td>{% if not application.time_commitments_correct or application.time_commitment_updates %}Yes{% else %} - {% endif %}</td>{% endif %}
 						</tr>
 						{% with conflicts=intern.get_intern_selection_conflicts %}
 						{% if conflicts %}
@@ -121,6 +124,7 @@ Review {{ community.name }} Applicants
 				<th scope="col">Application status</th>
 				<th scope="col">Applicant rating</th>
 				<th scope="col">Applying to GSoC?</th>
+				{% if is_staff %}<th scope="col">Time commitment updates</th>{% endif %}
 			</tr>
 			</thread>
 		{% for project in projects %}
@@ -136,6 +140,7 @@ Review {{ community.name }} Applicants
 					<td> - </td>
 					<td> - </td>
 					<td> - </td>
+					{% if is_staff %}<td> - </td>{% endif %}
 				</tr>
 				{% endif %}
 				{% for application in applicants %}
@@ -164,6 +169,7 @@ Review {{ community.name }} Applicants
 								<td> - </td>
 								{% else %} - </td><td> - </td>{% endif %}
 							<td>{% if application.applying_to_gsoc %}Yes{% else %} - {% endif %}</td>
+							{% if is_staff %}<td>{% if application.incorrect_time_commitments %}Yes{% else %} - {% endif %}</td>{% endif %}
 						</tr>
 					{% endwith %}
 				{% endfor %}
