--- a/home/templates/home/eligibility_results.html
+++ b/home/templates/home/eligibility_results.html
@@ -189,30 +189,84 @@ Outreachy eligibility results
 	<ul>
 		<li>User name: {{ request.user.username }}</li>
 		<li>Email address: {{ request.user.email }}</li>
-		<li>Which question was filled out incorrectly?</li>
+		<li>Which question or section was filled out incorrectly?</li>
+		<li>What is the correct information?</li>
 	</ul>
 
+	<p>
+	Please do not contest these results if the term dates provided match your academic calendar.
+	We use the term dates in official academic calendars.
+	We may have edited the term dates you provided to match your academic calendar.
+	</p>
+
+{% elif role.current_round.contributions_open.has_passed %}
+	<h1>Initial application is not approved</h1>
+	<p>
+	We're sorry to say your initial application was not approved.
+	Outreachy receives over 1,000 initial applications each round.
+	We encourage you to apply early for a future round.
+	Outreachy internships run twice a year, May to August and December to March.
+	</p>
+	<p>
+	Please sign up for the
+	<a href="https://lists.outreachy.org/cgi-bin/mailman/listinfo/announce">Outreachy announcement mailing list</a>,
+	so you can be notified of the next application period.
+	</p>
+
+	{% include 'home/snippet/initial_application.html' %}
 {% else %}
 
 	<h1>Your Initial Application is Under Review</h1>
 
 	<p>
-	Your initial application for Outreachy internships is being reviewed by the Outreachy organizers.
+	Your initial application for an Outreachy internship was received on {{ role.application.submission_date }}.
+	</p>
+	<p>
+	Your initial application is being reviewed by the Outreachy organizers.
 	We have already received a notification about your initial application, and there is no need for you to send an additional email.
        	We may follow up with additional questions for you via email.
 	</p>
+	<p><b>Do not submit a second initial application.</b></p>
 	<p>
-	All accepted applicants will recieve an email notification by {{ role.current_round.contributions_open }}.
-	Accepted applicants will then move onto the contribution phase. During the contribution phase, applicants make contributions to Outreachy projects.
+	Application results will be available on {{ role.current_round.contributions_open }} at 4pm UTC.
+	All accepted applicants will receive an email notification on that date.
+	Applicants who are not accepted will not receive an email.
+	You'll be able to check the status of your application on this page.
 	</p>
 	<p>
-	We encourage you to <a href='{% url 'docs' %}'>read our applicant and internship documentation</a> while you're waiting for your initial application results.
+	On {{ role.current_round.contributions_open }} at 4pm UTC, accepted applicants will move onto the contribution phase.
+	During the contribution phase, applicants make contributions to Outreachy projects.
 	</p>
 	<p>
-	You submitted your application on {{ role.application.submission_date }}.
+	We encourage you to <a href='{% url 'docs' %}'>read our documentation</a> while you're waiting for your initial application results.
+	The <a href='{% url 'docs-applicant' %}'>Applicant Guide</a> has tips for preparing for the contribution period.
+	The <a href='{% url 'docs-internship' %}'>Internship Guide</a> has information about the intern payment schedule.
 	</p>
-	<p>You will not be able to record contributions or make a final application until your initial application has been approved.
-	Do not try to contact mentors or community coordinators until your initial application has been approved.</p>
+	<p>
+	You can see some of the <a href='{% url 'project-selection' %}'>potential projects</a> for this round.
+	Projects will be added until the contribution period opens on {{ role.current_round.contributions_open }} at 4pm UTC.
+	Do not contact mentors or coordinators until the contribution period opens.
+	</p>
+
+	<p>
+	Please sign up for the
+	<a href="https://lists.outreachy.org/cgi-bin/mailman/listinfo/announce">Outreachy announcement mailing list</a>,
+	so you can be notified of important deadlines.
+	</p>
+
+	<h2>What if my initial application is incorrect?</h2>
+	<p>
+	If any of the below information is incorrect, please <a href='{% url 'contact-applicant-help' %}'>contact the Outreachy applicant helpers.</a>
+	<p>
+	</p>
+	Please provide the following information:
+	</p>
+	<ul>
+		<li>User name: {{ request.user.username }}</li>
+		<li>Email address: {{ request.user.email }}</li>
+		<li>Which question or section was filled out incorrectly?</li>
+		<li>What is the correct information?</li>
+	</ul>
 
 	{% include 'home/snippet/initial_application.html' %}
 
