Fix bug that was showing pending applications as still pending after the contribution period opens
Once the contribution period opens, any application we couldn't get to
review, or where people didn't answer our questions needs to show up as
rejected.

There was a bug in the template that incorrectly looked for
RoundPage.contribution_opens instead of RoundPage.contributions_open.

Because we didn't have that many applicants who were pending in previous
rounds, we didn't notice this bug.

--- a/home/templates/home/snippet/eligibility_prompts.html
+++ b/home/templates/home/snippet/eligibility_prompts.html
@@ -87,7 +87,7 @@
 	</div>
 {% elif role.is_pending_applicant %}
 	<div class="card border-info mb-3">
-		{% if not role.current_round.contribution_opens.has_passed %}
+		{% if not role.current_round.contributions_open.has_passed %}
 			<div class="card-header text-white bg-warning">Outreachy Initial Application Under Review</div>
 			<div class="card-body">
 				<p class="card-text">
