--- a/home/templates/home/snippet/eligibility_prompts.html
+++ b/home/templates/home/snippet/eligibility_prompts.html
@@ -72,7 +72,7 @@
 	    <div class="card-body">
 		<p class="card-text">
 		We're sorry, but after reviewing <a href="{% url 'eligibility-results' %}">your application</a>,
-		we have determined that you are not a strong applicant for the Outreachy internship program.
+		we have determined that your application is not strong enough for the Outreachy internship program.
 		</p>
 		<p class="card-text">
 		If you want to spread the word about Outreachy,
