Add policies for dealing with impacts of COVID-19.
Add a blog post explaining our new policies. Add a warning header to the
Outreachy travel page, pointing to the blog post. Otherwise leave the
travel page intact.

--- a/home/templates/home/travel_stipend.html
+++ b/home/templates/home/travel_stipend.html
@@ -6,6 +6,17 @@ Outreachy Travel Stipend
 
 {% block content %}
 
+<div class="card border-warning mb-3">
+        <div class="card-header text-white bg-warning">Temporary changes to travel stipend policies</div>
+        <div class="card-body">
+                <div class="card-text">
+			<p>
+			Effective as of March 27, 2020, all new travel using the Outreachy travel stipend is prohibited. The travel prohibition will be in place until further notice. Please <a href='{% url '2020-03-covid' %}'>read our blog post for details</a>.
+			</p>
+		</div>
+	</div>
+</div>
+
 <h1>What is the travel stipend?</h1>
 
 <p>Attending talks, workshops, and meeting other contributors in person is fun! It can also help you network to get a job. As part of your internship, you have a $500 USD travel stipend. You will not be reimbursed for more than $500. Reimbursement may take up to 30 days to be processed, so get your reimbursement request in as soon as you complete your blog post.</p>
