Change name and description of final application time commitments fields
It was too confusing to have "commitments" and "commitment" in the two
fields.

Rename:
 - "time_commitments_correct" -> "time_correct"
 - "time_commitment_updates" -> "time_updates"

Note in updates field description that people should leave it blank if
their time commitments are correct.

--- a/home/templates/home/community_applicants.html
+++ b/home/templates/home/community_applicants.html
@@ -76,7 +76,7 @@ Review {{ community.name }} Applicants
 							<td>{{ tcs.longest_period_free }} / {{ tcs.internship_total_days.days }} days</td>
 							<td>{{ application.number_contributions }}</td>
 							<td>{% if application.applying_to_gsoc %}Yes{% else %} - {% endif %}</td>
-							{% if is_staff %}<td>{% if not application.time_commitments_correct or application.time_commitment_updates %}Yes{% else %} - {% endif %}</td>{% endif %}
+							{% if is_staff %}<td>{% if not application.time_correct or application.time_updates %}Yes{% else %} - {% endif %}</td>{% endif %}
 						</tr>
 						{% with conflicts=intern.get_intern_selection_conflicts %}
 						{% if conflicts %}
