--- a/home/templates/home/project_applicants.html
+++ b/home/templates/home/project_applicants.html
@@ -162,12 +162,12 @@ that timeline, taking into account any time commitments the applicant has.
 			{% include 'home/snippet/time_commitment_overview.html' %}
 			{% with final_application=applicant_contributions.0.get_application %}
 				{% if final_application %}
-					{% if not final_application.time_commitments_correct or final_application.time_commitment_updates %}
+					{% if not final_application.time_correct or final_application.time_updates %}
 						<div class="card border-warning mb-3">
 							<div class="card-header text-white bg-warning">Incorrect Time Commitments</div>
 							<div class="card-body">
 								<p class="card-text">The applicant wants to update their time commitments with the following information:</p>
-								<p class="card-text"><pre>{{ final_application.time_commitment_updates }}</pre></p>
+								<p class="card-text"><pre>{% if final_application.time_correct %}Yes, my time commitments are correct. {% else %}No, my time commitments are incorrect. {% endif %}{{ final_application.time_updates }}</pre></p>
 							</div>
 						</div>
 					{% endif %}
