2020-05: Add sponsor job websites

--- a/home/templates/home/opportunities.html
+++ b/home/templates/home/opportunities.html
@@ -74,6 +74,7 @@ Outreachy | Opportunities with Sponsors - Outreachy
                 <li><p><a href="http://jobs.akamai.com/search/?q=open+source">Akamai</a>  </p></li>
                 <li><p><a href="http://jobs.cisco.com/">Cisco</a>  </p></li>
                 <li><p><a href="http://www.cloudera.com/content/cloudera/en/about/careers.html">Cloudera</a>  </p></li>
+                <li><p><a href="https://codeforscience.org/jobs">Code for Science & Society</a></p></li>
                 <li><p><a href="https://www.codeweavers.com/about/jobs">CodeWeavers</a> (Wine jobs)  </p></li>
                 <li><p><a href="https://creativecommons.org/about/team/opportunities/">Creative Commons</a></p></li>
                 <li><p><a href="https://endlessm.com/about-us">Endless</a> (GNOME jobs)  </p></li>
@@ -88,6 +89,7 @@ Outreachy | Opportunities with Sponsors - Outreachy
                 <li><p><a href="http://mifos.org/about-us/team/">Mifos</a> team and partners  </p></li>
                 <li><p><a href="https://nodejs.org/en/foundation/members/">Node.js Foundation corporate members</a>  </p></li>
                 <li><p><a href="http://openmrs.org/about/jobs">OpenMRS</a>  </p></li>
+                <li><p><a href="https://perlfoundation.org/">Perl Foundation</a></p></li>
                 <li><p><a href="https://www.shopify.com/careers">Shopify</a>  </p></li>
                 <li><p><a href="https://wiki.sugarlabs.org/go/Sugar_Labs">Sugar Labs</a>  </p></li>
                 <li><p><a href="http://twistedmatrix.com/trac/wiki/TwistedSponsors">Sponsors</a> and <a href="http://twistedmatrix.com/trac/wiki/TSF/FoundingSponsors">founding sponsors</a> of Twisted  </p></li>
