Week 1 email: Core values exercise
Studies show that a writing exercise may reduce impostor syndrome in
university classes:

https://www.discovermagazine.com/the-sciences/15-minute-writing-exercise-closes-the-gender-gap-in-university-level-physics

"The exercise is designed to affirm a person’s values, boosting their
sense of self-worth and integrity, and reinforcing their belief in
themselves. For people who suffer from negative stereotypes, this can
make all the difference between success and failure."

Let's see if this helps Outreachy interns!

We usually ask them to write about their experiences applying to
Outreachy. However, a lot of the blog posts end up looking very similar.
We have all the promotion material we need (unless the application
procedures change again). So this exercise will be more personal.

--- a/home/templates/home/docs/internship_guide.html
+++ b/home/templates/home/docs/internship_guide.html
@@ -150,7 +150,7 @@ Internship Guide | Outreachy Documentation
 {% if applicant_round %}
 	{% with current_round=applicant_round %}
 		<table class="table">
-			<tr><th width="175">{{ current_round.internship_week_1_email_date }}</th><td>Blog prompt: "Experiences applying to Outreachy"</td></tr>
+			<tr><th width="175">{{ current_round.internship_week_1_email_date }}</th><td>Blog prompt: "Introduce yourself"</td></tr>
 			<tr><th>{{ current_round.internship_week_3_email_date }}</th><td>Blog prompt: "Everybody struggles"</td></tr>
 			<tr><th>{{ current_round.internship_week_5_email_date }}</th><td>Blog prompt: "Think about your audience"</td></tr>
 			<tr><th>{{ current_round.internship_week_7_email_date }}</th><td>Mid-point project progress blog post</td></tr>
@@ -164,7 +164,7 @@ Internship Guide | Outreachy Documentation
 {% if intern_round %}
 	{% with current_round=intern_round %}
 		<table class="table">
-			<tr><th width="175">{{ current_round.internship_week_1_email_date }}</th><td>Blog prompt: "Experiences applying to Outreachy"</td></tr>
+			<tr><th width="175">{{ current_round.internship_week_1_email_date }}</th><td>Blog prompt: "Introduce yourself"</td></tr>
 			<tr><th>{{ current_round.internship_week_3_email_date }}</th><td>Blog prompt: "Everybody struggles"</td></tr>
 			<tr><th>{{ current_round.internship_week_5_email_date }}</th><td>Blog prompt: "Think about your audience"</td></tr>
 			<tr><th>{{ current_round.internship_week_7_email_date }}</th><td>Mid-point project progress blog post</td></tr>
