--- a/home/templates/home/docs/internship_guide.html
+++ b/home/templates/home/docs/internship_guide.html
@@ -1,4 +1,5 @@
 {% extends "base.html" %}
+{% load humanize %}
 
 {% block title %}
 Internship Guide | Outreachy Documentation
@@ -74,17 +75,17 @@ Internship Guide | Outreachy Documentation
 <p>Outreachy interns are paid $5,500 USD total for three months of work. The stipend is paid in three parts:</p>
 <ul>
 	{% if applicant_round %}
-		<li>${{ applicant_round.initialpayment }} initial stipend</li>
-		<li>${{ applicant_round.midpayment }} mid-point stipend</li>
-		<li>${{ applicant_round.finalpayment }} final stipend</li>
+		<li>${{ applicant_round.initialpayment|intcomma }} initial stipend</li>
+		<li>${{ applicant_round.midpayment|intcomma }} mid-point stipend</li>
+		<li>${{ applicant_round.finalpayment|intcomma }} final stipend</li>
 	{% elif intern_round %}
-		<li>${{ intern_round.initialpayment }} initial stipend</li>
-		<li>${{ intern_round.midpayment }} mid-point stipend</li>
-		<li>${{ intern_round.finalpayment }} final stipend</li>
+		<li>${{ intern_round.initialpayment|intcomma }} initial stipend</li>
+		<li>${{ intern_round.midpayment|intcomma }} mid-point stipend</li>
+		<li>${{ intern_round.finalpayment|intcomma }} final stipend</li>
 	{% else %}
-		<li>$1000 initial stipend</li>
-		<li>$2000 mid-point stipend</li>
-		<li>$2500 final stipend</li>
+		<li>$1,000 initial stipend</li>
+		<li>$2,000 mid-point stipend</li>
+		<li>$2,500 final stipend</li>
 	{% endif %}
 </ul>
 
